fix: fix current job alignment

--- a/styles/about-me.css
+++ b/styles/about-me.css
@@ -85,14 +85,13 @@
     margin-bottom: 0;
 }
 
-.about-me-wrapper>article>ul>li>h3>span {
-    margin-left: 0.5rem; 
+.about-me-wrapper>article>ul>li>p>span {
     background-color: #137f13; 
     color: white; 
-    border:2px solid white; 
+    border:2px solid #137f13; 
     border-radius: 4px;
-    padding: 0.25rem 0.75rem;
-    font-size: 1rem;
+    padding: 0.15rem 0.50rem;
+    font-size: 0.85rem;
 }
 
 .about-me-wrapper>article>ul>li>.dates {
